--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -99,37 +99,45 @@
  }
 
  /* Media query: tablets and larger (768px and up) */
-@media screen and (min-width: 768px) {
-    /* Header */
-    nav {
-        display: block;
-        position: relative;
-        box-shadow: none;
-        width: fit-content;
-        padding-right: 1rem;
-    }
+ @media screen and (min-width: 768px) {
 
-    #menu {
-        display: flex;
-    }
+     /* Header */
+     nav {
+         display: block;
+         position: relative;
+         box-shadow: none;
+         width: fit-content;
+         padding-right: 1rem;
+     }
 
-    #menu > li {
-        padding-left: 1rem;
-    }
+     #menu {
+         display: flex;
+     }
 
-    .nav-toggle-label {
-        display: none;
-    }
+     #menu>li {
+         padding-left: 1rem;
+     }
 
-    #logo {
-        font-size: 280%;
-        line-height: 75px;
-        margin: 0 0.5rem;
-    }
+     .nav-toggle-label {
+         display: none;
+     }
 
-    /* Main content */
-    main {
-        /* Push main content down to accommodate larger header */
-        margin-top: 79px;
-    }
-}
+     #logo {
+         font-size: 280%;
+         line-height: 75px;
+         margin: 0 0.5rem;
+     }
+
+     /* Main content */
+     main {
+         /* Push main content down to accommodate larger header */
+         margin-top: 79px;
+     }
+ }
+
+ /* Large devices (laptops and desktops, 992px and up) */
+ @media screen and (min-width: 992px) {
+     #menu a:hover {
+         border-bottom: 1px solid #3a3a3a;
+     }
+ }
