--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -218,6 +218,14 @@
      color: #3a3a3a;
  }
 
+ /* Media query: large or landscape phones (576px and up) */
+ @media screen and (min-width: 576px) {
+     #photos {
+         column-count: 2;
+         column-gap: 0;
+     }
+ }
+
  /* Media query: tablets and larger (768px and up) */
  @media screen and (min-width: 768px) {
 
@@ -278,12 +286,23 @@
          align-self: flex-end;
      }
 
+     /* Gallery */
+     #photos {
+         column-count: 3;
+     }
+ }
+
  }
 
  /* Large devices (laptops and desktops, 992px and up) */
  @media screen and (min-width: 992px) {
      #menu a:hover {
          border-bottom: 1px solid #3a3a3a;
+     }
+
+     /* Gallery */
+     #photos {
+         column-count: 4;
      }
  }
 
